<resources>
    <string name="app_name">BeneFIT</string>
    <!-- Strings related to login -->
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Let\'s Start</string>
    <string name="action_register">Let\'s Go!</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >7 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Welcome_back">Welcome Back!</string>
    <string name="new_user">Don\'t have an account? Sign Up</string>
    <string name="register">Register</string>
    <string name="login" translatable="false">Login</string>
    <string name="e_mail" translatable="false">e-mail</string>
    <string name="prompt_email" translatable="false">prompt_email</string>
    <string name="conferma_password">Confirm Password</string>
    <string name="username" translatable="false">Username</string>
    <string name="title_activity_home">
        Exercises list
    </string>
    <string name="enterAnyway">Guest access</string>
    <string name="title_activity_category">Exercises categories</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="category8">Arms</string>
    <string name="category9">Legs</string>
    <string name="category10">Abs</string>
    <string name="category11">Chest</string>
    <string name="category12">Back</string>
    <string name="category13">Shoulders</string>
    <string name="category14">Calves</string>
    <string name="categorySaved">Saved workouts</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_workout">WorkoutActivity</string>
</resources>