<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CategoryActivity"
    tools:showIn="@layout/activity_category">

    <TableLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">
        <TableRow
            android:background="@drawable/category_button"
            android:clickable="true"
            android:id="@+id/CategorySaved"
            android:focusable="true"
            android:elevation="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/saved" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="7"
                android:textSize="20dp"
                android:text="@string/categorySaved"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/black"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@drawable/category_button"
            android:clickable="true"
            android:id="@+id/Category8"
            android:focusable="true"
            android:elevation="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/category8" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="7"
                android:textSize="20dp"
                android:text="@string/category8"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/black"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@drawable/category_button"
            android:clickable="true"
            android:id="@+id/Category9"
            android:focusable="true"
            android:layout_marginLeft="20dp"
            android:elevation="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/category9" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="7"
                android:textSize="20dp"
                android:text="@string/category9"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/black"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@drawable/category_button"
            android:clickable="true"
            android:id="@+id/Category10"
            android:focusable="true"
            android:elevation="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/category10" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="7"
                android:textSize="20dp"
                android:text="@string/category10"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/black"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@drawable/category_button"
            android:clickable="true"
            android:id="@+id/Category11"
            android:focusable="true"
            android:elevation="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/category11" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="7"
                android:textSize="20dp"
                android:text="@string/category11"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/black"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@drawable/category_button"
            android:clickable="true"
            android:id="@+id/Category12"
            android:focusable="true"
            android:elevation="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/category12" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="7"
                android:textSize="20dp"
                android:text="@string/category12"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/black"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@drawable/category_button"
            android:clickable="true"
            android:id="@+id/Category13"
            android:focusable="true"
            android:elevation="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/category13" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="7"
                android:textSize="20dp"
                android:text="@string/category13"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/black"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@drawable/category_button"
            android:clickable="true"
            android:id="@+id/Category14"
            android:focusable="true"
            android:elevation="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/category14" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="7"
                android:textSize="20dp"
                android:text="@string/category14"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/black"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

</androidx.core.widget.NestedScrollView>